Fix aside overlapping content

--- a/source/stylesheets/_content.scss
+++ b/source/stylesheets/_content.scss
@@ -13,7 +13,6 @@ section {
       float: left;
 
       margin-left: -1 * $content-offset;
-      padding-right: $content-offset;
       width: $content-offset;
 
       text-align: right;
